--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: iPortfolio
-  * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  <script type="JavaScript">
+    window.addEventListener("unload", function() {
+        document.getElementById("footer").style.display = "none";
+    });
+  </script>
+  
 </head>
 
 <body>
