--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   
 </head>
 
-<body>
+<body unload="document.getElementById("footer").style.display ='none';">
 
   <!-- ======= Mobile nav toggle button ======= -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
