--- a/index.html
+++ b/index.html
@@ -52,11 +52,10 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Felipe Sotelo S.</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://twitter.com/ingphillip" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.facebook.com/felipe.sotelo.sotelo/" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/ingphillips/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/ingphillip/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -559,7 +558,7 @@ Sin duda es un profesional con mucho talento, comprometido y de confianza que pa
         <img width="60" src="https://cdn.shopify.com/s/files/1/0070/3666/5911/files/icon_only_old.png?465/" alt="Whatsapp Icon" /></a>
       </div>
     </section>
-      <!-- <div class="container">
+     
 
         <div class="section-title">
           <h2>Contact</h2>
