--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Passionate about transforming concepts into tangible digital solutions, my journey is marked by a commitment to solid principles, innovative problem-solving, and continuous learning.</p>
         </div>
 
         <div class="row skills-content">
