--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Software Developer</h4>
+              <h4>Software Developer at Isolucion</h4>
               <h5>Aug 2019 - June 2021</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <p><em>Bogotá, Colombia</em></p>
               <ul>
                 <li>Building new components in C# to enhance the functionality of the Web Site Application.</li>
                 <li>Developing Desktop Applications utilizing WinForms for a rich user experience.</li>
