--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     /* Add some styling for the floating button */
     #h5b_whatsapp_chat {
       align-self:normal;
-      top: 20px;
+      top: 500px;
       position:fixed;
       bottom: 20px;
-      right: 20px;
+      left: 20px;
       z-index: 1000;
     }
   </style>
