--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
     /* Add some styling for the floating button */
     #h5b_whatsapp_chat {
       align-self:normal;
+      top: 20px;
       position:fixed;
       bottom: 20px;
-      left: 20px;
+      right: 70px;
       z-index: 1000;
     }
   </style>
