solve problem porfolio wrap

--- a/index.html
+++ b/index.html
@@ -346,55 +346,55 @@
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
+            <div class="">
               <iframe width="560" height="315" src="https://www.youtube.com/embed/ssTLm3E53A0?si=Dt26DMLptULIA8zq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
+            <div class="">
               <iframe width="560" height="315" src="https://www.youtube.com/embed/boPjvSm1Fug?si=zul_pR0cQkRzS9w9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
+            <div class="">
               <iframe width="560" height="315" src="https://www.youtube.com/embed/cVgMH866IGo?si=0HaSWkkQE14ds6g9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
+            <div class="">
               <iframe width="560" height="315" src="https://www.youtube.com/embed/KF9BbiX1t9s?si=-1FzHD2yGFBf98c8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
+            <div class="">
               <iframe width="560" height="315" src="https://www.youtube.com/embed/xhlpJb6kowo?si=UXJ3zVuUkgJnDxAl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
+            <div class="">
               <iframe width="560" height="315" src="https://www.youtube.com/embed/y0k8t9kRDAY?si=h3eZ1RioDhFRRFrD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
+            <div class="">
               <iframe width="560" height="315" src="https://www.youtube.com/embed/aVSXkQcl5x4?si=YTHKsnsTtglLAhL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
+            <div class="">
               <iframe width="560" height="315" src="https://www.youtube.com/embed/-UEi7M-WCfg?si=oL5rp2RRQAZej1mP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
+            <div class="">
               <iframe width="560" height="315" src="https://www.youtube.com/embed/Oz_XBgaWY5Q?si=oWMFfE7x2YnOyivI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
