improve the load

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4" data-aos="fade-right">
+          <div class="col-lg-4" >
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+          <div class="col-lg-8 pt-4 pt-lg-0 content" >
             <h3>Full Stack &amp; .NET Developer.</h3>
             <p class="fst-italic">
               Responsible and committed professional, focused on achieving the goals and objectives assigned in the workplace. I actively engage in continuous research on various topics to stay updated on the latest developments in software development. My positive attitude makes me an effective team player, collaborating seamlessly with architects, developers, business analysts, and others to achieve shared success.
@@ -137,7 +137,7 @@
 
         <div class="row no-gutters">
 
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
               <span data-purecounter-start="0" data-purecounter-end="9" data-purecounter-duration="1" class="purecounter"></span>
@@ -145,21 +145,21 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch"  >
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="12" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Projects</strong></p>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch"  >
             <div class="count-box">
               <i class="bi bi-people"></i>
               <span data-purecounter-start="0" data-purecounter-end="+10000" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Hours of Development</strong></p>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" >
             <div class="count-box">
               <i class="bi bi-headset"></i>
               <span data-purecounter-start="0" data-purecounter-end="5000" data-purecounter-duration="1" class="purecounter"></span>
@@ -185,7 +185,7 @@
 
         <div class="row skills-content">
 
-          <div class="col-lg-6" data-aos="fade-up">
+          <div class="col-lg-6" >
 
             <div class="progress">
               <span class="skill">.Net <i class="val">100%</i></span>
@@ -217,7 +217,7 @@
 
           </div>
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6">
             <div class="progress">
               <span class="skill">Vue.js<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
@@ -262,7 +262,7 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-6" data-aos="fade-up">
+          <div class="col-lg-6" >
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Felipe Sotelo</h4>
@@ -289,7 +289,7 @@
                 In this area of human knowledge, I have worked as a passionate software developer, applying concepts and methodologies, continuously enhancing my skills. I have had the opportunity to contribute to the development of both simple and complex enterprise applications, allowing for substantial professional growth.</p>
             </div>
           </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6" >
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Senior .Net Developer at Globant</h4>
@@ -329,7 +329,7 @@
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
-      <div class="container">
+      <div class="container"  >
 
         <div class="section-title">
           <h2>Portfolio</h2>
@@ -337,7 +337,7 @@
           </p>
         </div>
 
-        <div class="row" data-aos="fade-up">
+        <div class="row"  data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
@@ -348,7 +348,7 @@
           </div>
         </div>
 
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+        <div class="row portfolio-container" >
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="">
@@ -419,32 +419,32 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+          <div class="col-lg-4 col-md-6 icon-box" >
             <div class="icon"><i class="bi bi-briefcase"></i></div>
             <h4 class="title"><a href="">Full Stack .NET Development</a></h4>
             <p class="description">Comprehensive design and development of web and mobile applications with .NET, ensuring an exceptional user experience and efficient performance.</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 icon-box" >
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
             <h4 class="title"><a href="">Robust Software Architecture</a></h4>
             <p class="description">Creation of solid and scalable architectures in .NET to provide resilient foundations ready for continuous growth</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 icon-box" >
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
             <h4 class="title"><a href="">Performance Optimization in .NET</a></h4>
             <p class="description">Continuous improvement of the performance of existing applications in .NET, ensuring efficiency and responsive user experiences.</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-4 col-md-6 icon-box" >
             <div class="icon"><i class="bi bi-binoculars"></i></div>
             <h4 class="title"><a href="">.NET Microservices Development</a></h4>
             <p class="description">Implementation of microservices architectures with .NET to achieve modular, flexible, and easily maintainable applications.</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+          <div class="col-lg-4 col-md-6 icon-box" >
             <div class="icon"><i class="bi bi-brightness-high"></i></div>
             <h4 class="title"><a href="">Integration and Deployment in .NET</a></h4>
             <p class="description">Seamless connection between systems and efficient deployment of .NET solutions, ensuring smooth collaboration and rapid results.</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+          <div class="col-lg-4 col-md-6 icon-box" >
             <div class="icon"><i class="bi bi-calendar4-week"></i></div>
             <h4 class="title"><a href="">Frontend Development</a></h4>
             <p class="description">Elevate your digital experience with expert Frontend Development. As a seasoned .NET developer, I craft responsive UI/UX designs, seamlessly integrate with robust backends, optimize performance, and embrace cutting-edge technologies for a modern, engaging user interface. Let's bring your digital vision to life</p>
@@ -465,11 +465,11 @@
           </p>
         </div>
 
-        <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
+        <div class="testimonials-slider swiper" >
           <div class="swiper-wrapper">
 
             <div class="swiper-slide">
-              <div class="testimonial-item" data-aos="fade-up">
+              <div class="testimonial-item" >
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Cuando trabajamos en el mismo proyecto, Felipe demostró su habilidad para abordar cada tarea asignada en el proyecto con un enfoque tranquilo y metódico. Quiero destacar su disposición para enfrentar desafíos nuevos, así como su dedicación para aprender y superarse constantemente. Su capacidad para colaborar de manera fluida y comunicarse de forma efectiva no solo lo convierten en un activo para este proyecto, sino para cualquier equipo en el que participe.
