--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <div class="hero-container" data-aos="fade-in">
+    <div class="hero-container">
       <h1>Felipe Sotelo S.</h1>
       <p>I'm <span class="typed" data-typed-items="Passionate software developer, Enthusiastic, Responsible, Dreamer."></span></p>
     </div>
