--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <div class="hero-container">
+    <div class="hero-container" >
       <h1>Felipe Sotelo S.</h1>
       <p>I'm <span class="typed" data-typed-items="Passionate software developer, Enthusiastic, Responsible, Dreamer."></span></p>
     </div>
@@ -140,7 +140,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="9" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="9"  class="purecounter"></span>
               <p><strong>Happy Clients</strong></br>Worked Positions</p>
             </div>
           </div>
@@ -148,21 +148,21 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch"  >
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="12" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="12"  class="purecounter"></span>
               <p><strong>Projects</strong></p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch"  >
             <div class="count-box">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="+10000" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="+10000"  class="purecounter"></span>
               <p><strong>Hours of Development</strong></p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" >
             <div class="count-box">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="5000" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="5000"  class="purecounter"></span>
               <p><strong>Hours Of Support</strong></p>
             </div>
           </div>
@@ -337,7 +337,7 @@
           </p>
         </div>
 
-        <div class="row"  data-aos="fade-up" data-aos-delay="100">
+        <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
@@ -352,55 +352,55 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/ssTLm3E53A0?si=Dt26DMLptULIA8zq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe loading="lazy" width="560" height="315" src="https://www.youtube.com/embed/ssTLm3E53A0?si=Dt26DMLptULIA8zq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/boPjvSm1Fug?si=zul_pR0cQkRzS9w9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe loading="lazy" width="560" height="315" src="https://www.youtube.com/embed/boPjvSm1Fug?si=zul_pR0cQkRzS9w9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/cVgMH866IGo?si=0HaSWkkQE14ds6g9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe loading="lazy" width="560" height="315" src="https://www.youtube.com/embed/cVgMH866IGo?si=0HaSWkkQE14ds6g9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/KF9BbiX1t9s?si=-1FzHD2yGFBf98c8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe loading="lazy" width="560" height="315" src="https://www.youtube.com/embed/KF9BbiX1t9s?si=-1FzHD2yGFBf98c8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/xhlpJb6kowo?si=UXJ3zVuUkgJnDxAl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe loading="lazy" width="560" height="315" src="https://www.youtube.com/embed/xhlpJb6kowo?si=UXJ3zVuUkgJnDxAl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/y0k8t9kRDAY?si=h3eZ1RioDhFRRFrD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe loading="lazy" width="560" height="315" src="https://www.youtube.com/embed/y0k8t9kRDAY?si=h3eZ1RioDhFRRFrD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/aVSXkQcl5x4?si=YTHKsnsTtglLAhL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe loading="lazy" width="560" height="315" src="https://www.youtube.com/embed/aVSXkQcl5x4?si=YTHKsnsTtglLAhL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/-UEi7M-WCfg?si=oL5rp2RRQAZej1mP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe loading="lazy" width="560" height="315" src="https://www.youtube.com/embed/-UEi7M-WCfg?si=oL5rp2RRQAZej1mP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/Oz_XBgaWY5Q?si=oWMFfE7x2YnOyivI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe loading="lazy" width="560" height="315" src="https://www.youtube.com/embed/Oz_XBgaWY5Q?si=oWMFfE7x2YnOyivI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
 
