update photo and presentation

--- a/index.html
+++ b/index.html
@@ -92,11 +92,9 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4" >
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content" >
-            <h3>Full Stack &amp; .NET Developer.</h3>
+         
+          <div class="content" >
+            <h3>Full Stack .NET Developer.</h3>
             <p class="fst-italic">
               Responsible and committed professional, focused on achieving the goals and objectives assigned in the workplace. I actively engage in continuous research on various topics to stay updated on the latest developments in software development. My positive attitude makes me an effective team player, collaborating seamlessly with architects, developers, business analysts, and others to achieve shared success.
             </p>
