change add angular app

--- a/index.html
+++ b/index.html
@@ -394,6 +394,16 @@
         <div class="row portfolio-container">
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="" style="text-align: center;">
+              <a href="https://fsotelos.github.io/angularprod">
+                <img width="300" height="200"
+                  src="https://sg.com.mx/sites/default/files/styles/570x500/public/images/angular-logo.png?itok=_4hR0cNu" />
+              </a>
+              <br/>
+              <span style="font-weight: bold;">Angular Sample App</span>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="" style="text-align: center;">
               <a href="https://fsotelos.github.io/vueprod">
                 <img width="300" height="200"
                   src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0Tcs76jA411c8UfPIgnQyv5TjHvUysohFeK8SbKAsHoQxurgA9Dvn5n250P0amxytpPM&usqp=CAU" />
